Правки (Иконки, выход из программы)
Заменил иконки

Заменил способ подключения - теперь работает существенно быстрее (раз
эток в 10), но если есть прокси могут быть проблемы..

Заменил на кнопке "Выход" - Application.Exit на Environment.Exit. Так
как были косяки с выходом. (На старой версии если только запустили и не
сворачивали и не закрывали, то просто кнопка не работала :) )

Исправлен выход при перезагрузке-выключении-выходе из системы. Теперь
при данных событиях программа завершается, а не висит и не блокирует
выключение.

Добавил readme.md

--- a/baraholkoNewPostChecker.csproj
+++ b/baraholkoNewPostChecker.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>favicon.ico</ApplicationIcon>
+    <ApplicationIcon>baraholko.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,7 +46,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -86,7 +85,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="favicon.ico" />
+    <Content Include="baraholko.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
